@@ -1,5 +1,6 @@
 Version 1.1.2 -- DEVELOPMENT
 ----------------------------
+- Support for multiple identities
 
 Version 1.1.1 -- April 30, 2001
 -------------------------------
